<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/child_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/father_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/father_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/mother_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mother_name"
                style="@style/EditorFieldStyle"
                android:inputType="textCapWords"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/gender" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/dob"/>

        <EditText
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Date"
            android:focusable="false"/>

        <EditText
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Time"
            android:focusable="false"/>
    </LinearLayout>

    <Button
        android:id="@+id/done_editing"
        android:text="Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>